examples/test/testpolicy7632.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7632
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key14: value39
      key13: value22
      key2: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value44
          key2: value43
          key21: value13
      podSelector:
        matchLabels:
          key42: value33
          key7: value41
          key2: value42
